yandex test (lecture + seance = lecture)

--- a/index.html
+++ b/index.html
@@ -76,30 +76,48 @@
                     </picture>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="seance">
-        <div class="container">
-            <div class="seance__wrapper">
-                <div class="seance__img">
+            <div class="lecture__wrapper lecture__wrapper--modifier">
+                <div class="lecture__img lecture__img--modifier">
                     <picture>
                         <img src="img/together_chess.png" alt="Фото сеанса">
                     </picture>
                 </div>
-                <div class="seance__info">
-                    <h3 class="seance__text">И сеанс <span>одновременной игры <br>в шахматы на 160 досках</span> гроссмейстера О. Бендера</h3>
-                        <table class="seance__table">
-                            <tr><td>Место проведения:</td><td>Клуб «Картонажник»</td></tr>
-                            <tr><td>Дата и время мероприятия:</td><td>22 июня 1927 г. в 18:00</td></tr>
-                            <tr><td>Стоимость входных билетов:</td><td>20 коп.</td></tr>
-                            <tr><td>Плата за игру:</td><td>50 коп.</td></tr>
-                            <tr><td>Взнос на телеграммы:</td><td><span class="seance__discount">100 руб.</span>21 руб. 16 коп.</td></tr>
-                        </table>
-                    <div class="seance__ask">По всем вопросам обращаться в администрацию к К.Михельсону</div>
+                <div class="lecture__text">
+                    <h3 class="lecture__info">И сеанс <span>одновременной игры <br>в шахматы на 160 досках</span> гроссмейстера О. Бендера</h3>
+                    <table class="lecture__table">
+                        <tr><td>Место проведения:</td><td>Клуб «Картонажник»</td></tr>
+                        <tr><td>Дата и время мероприятия:</td><td>22 июня 1927 г. в 18:00</td></tr>
+                        <tr><td>Стоимость входных билетов:</td><td>20 коп.</td></tr>
+                        <tr><td>Плата за игру:</td><td>50 коп.</td></tr>
+                        <tr><td>Взнос на телеграммы:</td><td><span class="lecture__discount">100 руб.</span>21 руб. 16 коп.</td></tr>
+                    </table>
+                    <div class="lecture__ask">По всем вопросам обращаться в администрацию к К.Михельсону</div>
                 </div>
             </div>
         </div>
     </section>
+<!--    <section class="seance">-->
+<!--        <div class="container">-->
+<!--            <div class="seance__wrapper">-->
+<!--                <div class="seance__img">-->
+<!--                    <picture>-->
+<!--                        <img src="img/together_chess.png" alt="Фото сеанса">-->
+<!--                    </picture>-->
+<!--                </div>-->
+<!--                <div class="seance__info">-->
+<!--                    <h3 class="seance__text">И сеанс <span>одновременной игры <br>в шахматы на 160 досках</span> гроссмейстера О. Бендера</h3>-->
+<!--                        <table class="seance__table">-->
+<!--                            <tr><td>Место проведения:</td><td>Клуб «Картонажник»</td></tr>-->
+<!--                            <tr><td>Дата и время мероприятия:</td><td>22 июня 1927 г. в 18:00</td></tr>-->
+<!--                            <tr><td>Стоимость входных билетов:</td><td>20 коп.</td></tr>-->
+<!--                            <tr><td>Плата за игру:</td><td>50 коп.</td></tr>-->
+<!--                            <tr><td>Взнос на телеграммы:</td><td><span class="seance__discount">100 руб.</span>21 руб. 16 коп.</td></tr>-->
+<!--                        </table>-->
+<!--                    <div class="seance__ask">По всем вопросам обращаться в администрацию к К.Михельсону</div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 </main>
 <!--</div>-->
 <!--</div>-->
